--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,7 @@
 #
 #    pip-compile 
 #
-certifi==2019.3.9         # via requests
-chardet==3.0.4            # via requests
 django==2.1.7
+djangorestframework==3.9.2
 gunicorn==19.9.0
-idna==2.8                 # via requests
-pillow==5.4.1
 pytz==2018.9              # via django
-requests==2.21.0
-urllib3==1.24.1           # via requests
