--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3'
 services:
   web:
-    build: .
+    build:
+      context: .
+      args:
+        - NODE_ENV=development
     volumes:
       - ./src/:/app/src/
     command: ./manage.py runserver 0.0.0.0:8000
