--- a/src/app.json
+++ b/src/app.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "dokku": {
-      "postdeploy": "./manage.py collectstatic --noinput --clear"
+      "postdeploy": "/app/src/manage.py collectstatic --noinput --clear"
     }
   }
 }
