--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,15 @@
 #
 #    pip-compile 
 #
+boto3==1.9.119
+botocore==1.12.119        # via boto3, s3transfer
+django-storages==1.7.1
 django==2.1.7
 djangorestframework==3.9.2
+docutils==0.14            # via botocore
+jmespath==0.9.4           # via boto3, botocore
+python-dateutil==2.8.0    # via botocore
 pytz==2018.9              # via django
-whitenoise==4.1.2
+s3transfer==0.2.0         # via boto3
+six==1.12.0               # via python-dateutil
+urllib3==1.24.1           # via botocore
