--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,12 @@
 #
 #    pip-compile 
 #
-boto3==1.9.119
-botocore==1.12.119        # via boto3, s3transfer
-django-storages==1.7.1
+certifi==2019.3.9         # via minio
+django-minio-storage==0.2.2
 django==2.1.7
 djangorestframework==3.9.2
-docutils==0.14            # via botocore
-jmespath==0.9.4           # via boto3, botocore
-python-dateutil==2.8.0    # via botocore
-pytz==2018.9              # via django
-s3transfer==0.2.0         # via boto3
+minio==4.0.12             # via django-minio-storage
+python-dateutil==2.8.0    # via minio
+pytz==2018.9              # via django, minio
 six==1.12.0               # via python-dateutil
-urllib3==1.24.1           # via botocore
+urllib3==1.24.1           # via minio
