--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,14 @@
 #
 #    pip-compile 
 #
+--no-binary psycopg2
+
 certifi==2019.3.9         # via minio
 django-minio-storage==0.2.2
 django==2.1.7
 djangorestframework==3.9.2
 minio==4.0.12             # via django-minio-storage
+psycopg2==2.7.7
 python-dateutil==2.8.0    # via minio
 pytz==2018.9              # via django, minio
 six==1.12.0               # via python-dateutil
