--- a/requirements.in
+++ b/requirements.in
@@ -2,3 +2,6 @@ django==2.1.*
 djangorestframework==3.9.*
 django-minio-storage==0.2.*
 psycopg2>=2.7,<2.8 --no-binary psycopg2
+# dev
+coverage
+flake8
