--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,17 @@
 --no-binary psycopg2
 
 certifi==2019.3.9         # via minio
+coverage==4.5.3
 django-minio-storage==0.2.2
 django==2.1.7
 djangorestframework==3.9.2
+entrypoints==0.3          # via flake8
+flake8==3.7.7
+mccabe==0.6.1             # via flake8
 minio==4.0.12             # via django-minio-storage
 psycopg2==2.7.7
+pycodestyle==2.5.0        # via flake8
+pyflakes==2.1.1           # via flake8
 python-dateutil==2.8.0    # via minio
 pytz==2018.9              # via django, minio
 six==1.12.0               # via python-dateutil
