--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "JEC",
   "license": "ISC",
   "dependencies": {
+    "minimist": "^1.2.0",
     "puppeteer": "^1.13.0"
   },
   "devDependencies": {
