--- a/requirements.in
+++ b/requirements.in
@@ -4,5 +4,6 @@ coreapi==2.3.*
 django-minio-storage==0.2.*
 psycopg2>=2.7,<2.8 --no-binary psycopg2
 # dev
+django-debug-toolbar==1.11.*
 coverage
 flake8
