--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==3.0.4            # via requests
 coreapi==2.3.3
 coreschema==0.0.4         # via coreapi
 coverage==4.5.3
+django-debug-toolbar==1.11
 django-minio-storage==0.2.2
 django==2.1.7
 djangorestframework==3.9.2
@@ -29,5 +30,6 @@ python-dateutil==2.8.0    # via minio
 pytz==2018.9              # via django, minio
 requests==2.21.0          # via coreapi
 six==1.12.0               # via python-dateutil
+sqlparse==0.3.0           # via django-debug-toolbar
 uritemplate==3.0.0        # via coreapi
 urllib3==1.24.1           # via minio, requests
