--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,11 @@
 django==2.1.*
+Pillow==5.4.*
 djangorestframework==3.9.*
 coreapi==2.3.*
 django-minio-storage==0.2.*
 psycopg2>=2.7,<2.8 --no-binary psycopg2
 # dev
+python-magic==0.4.*
 django-debug-toolbar==1.11.*
 coverage
 flake8
