--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,12 @@ jinja2==2.10              # via coreschema
 markupsafe==1.1.1         # via jinja2
 mccabe==0.6.1             # via flake8
 minio==4.0.12             # via django-minio-storage
+pillow==5.4.1
 psycopg2==2.7.7
 pycodestyle==2.5.0        # via flake8
 pyflakes==2.1.1           # via flake8
 python-dateutil==2.8.0    # via minio
+python-magic==0.4.15
 pytz==2018.9              # via django, minio
 requests==2.21.0          # via coreapi
 six==1.12.0               # via python-dateutil
