--- a/requirements.in
+++ b/requirements.in
@@ -2,15 +2,18 @@ django==2.2.*
 djangorestframework==3.11.*
 coreapi==2.3.*
 
+# project
+django-minio-storage
+psycopg2
+
 # dev & tests
 coverage
 flake8
 Pillow==7.*
 python-magic
 
-# project
-django-minio-storage
-psycopg2
-
 # dev project
 django-debug-toolbar
+
+# prod
+gunicorn[gevent]
