--- a/requirements.txt
+++ b/requirements.txt
@@ -4,38 +4,40 @@
 #
 #    pip-compile
 #
-certifi==2020.4.5.1       # via minio, requests
-chardet==3.0.4            # via requests
-configparser==5.0.0       # via minio
+certifi==2020.12.5        # via minio, requests
+chardet==4.0.0            # via requests
+configparser==5.0.1       # via minio
 coreapi==2.3.3            # via -r requirements.in
 coreschema==0.0.4         # via coreapi
-coverage==5.1             # via -r requirements.in
-django-debug-toolbar==2.2  # via -r requirements.in
-django-minio-storage==0.3.7  # via -r requirements.in
-django==2.2.12            # via -r requirements.in, django-debug-toolbar, django-minio-storage, djangorestframework
-djangorestframework==3.11.0  # via -r requirements.in
-flake8==3.8.1             # via -r requirements.in
-gevent==20.5.0            # via gunicorn
-greenlet==0.4.15          # via gevent
+coverage==5.4             # via -r requirements.in
+django-debug-toolbar==3.2  # via -r requirements.in
+django-minio-storage==0.3.10  # via -r requirements.in
+django==2.2.18            # via -r requirements.in, django-debug-toolbar, django-minio-storage, djangorestframework
+djangorestframework==3.12.2  # via -r requirements.in
+flake8==3.8.4             # via -r requirements.in
+gevent==21.1.2            # via gunicorn
+greenlet==1.0.0           # via gevent
 gunicorn[gevent]==20.0.4  # via -r requirements.in
-idna==2.9                 # via requests
+idna==2.10                # via requests
 itypes==1.2.0             # via coreapi
-jinja2==2.11.2            # via coreschema
+jinja2==2.11.3            # via coreschema
 markupsafe==1.1.1         # via jinja2
 mccabe==0.6.1             # via flake8
-minio==5.0.10             # via django-minio-storage
-pillow==7.1.2             # via -r requirements.in
-psycopg2==2.8.5           # via -r requirements.in
+minio==6.0.2              # via django-minio-storage
+pillow==7.2.0             # via -r requirements.in
+psycopg2==2.8.6           # via -r requirements.in
 pycodestyle==2.6.0        # via flake8
 pyflakes==2.2.0           # via flake8
 python-dateutil==2.8.1    # via minio
 python-magic==0.4.18      # via -r requirements.in
-pytz==2020.1              # via django, minio
-requests==2.23.0          # via coreapi
-six==1.14.0               # via python-dateutil
-sqlparse==0.3.1           # via django, django-debug-toolbar
+pytz==2021.1              # via django, minio
+requests==2.25.1          # via coreapi
+six==1.15.0               # via python-dateutil
+sqlparse==0.4.1           # via django, django-debug-toolbar
 uritemplate==3.0.1        # via coreapi
-urllib3==1.25.9           # via minio, requests
+urllib3==1.26.3           # via minio, requests
+zope.event==4.5.0         # via gevent
+zope.interface==5.2.0     # via gevent
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
